<resources>
    <string name="app_name">appPasteleria</string>
    <string name="title_home">Home</string>
    <string name="title_compra">COMPRAR AHORA</string>
    <string name="title_cesta">AÑADIR A LA CESTA</string>
    <string name="title_dashboard">Actividad</string>
    <string name="title_shop">Compras</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Mi Cuenta</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_out">Registrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ac_usu_nom">Nombres</string>
    <string name="ac_usu_ape">Apellidos</string>
    <string name="ac_usu_ema">Email</string>
    <string name="title_cantidad">Cantidad</string>
    <string name="action_log_out">Cerrar sesion</string>
    <string name="action_pendientes_envio">Pendientes de envio</string>
    <string name="action_pedidos_eviados">Pedidos enviados</string>
    <string name="action_direcc_entrega">Direccion de entrega</string>
    <string name="action_ajustes">Ajustes</string>
    <string name="action_nombreUsu_settings">Nombres</string>
    <string name="action_emailUsu_settings">Email</string>
    <string name="action_apeUsu_settings">Apellidos</string>
    <string name="action_telUsu_settings">Telefono</string>
    <string name="action_passUsu_settings">Contraseña</string>
    <string name="action_sexUsu_settings">Sexo</string>
    <string name="ac_usu_pass">Contraseña</string>
    <string name="ac_usu_telef">Telefono</string>
    <string name="ac_usu_FecNac">Fecha de nacimiento</string>
    <string name="ac_usu_direcc">Direccion</string>
    <string name="action_continuar">Continuar</string>
    <string name="env_desc_ProdInf">A cualquier distrito permitido enviado por delivery con costo adicional</string>
</resources>
