<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/toolbar"
        android:background="@color/textColorBlack">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registrate"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/margin_vertical_field">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_email_black_24dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ac_usu_ema"
                android:singleLine="true"
                android:maxLength="80"
                android:inputType="textEmailAddress"
                android:id="@+id/etEmail_Aregister"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/margin_vertical_field">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_vpn_key_black_24dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ac_usu_pass"
                android:singleLine="true"
                android:maxLength="18"
                android:inputType="textPassword"
                android:id="@+id/etPasswd_Aregister"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/margin_vertical_field">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_person_black_24dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ac_usu_nom"
                android:singleLine="true"
                android:maxLength="30"
                android:inputType="textPersonName"
                android:id="@+id/etNom_Aregister"
                />
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="@dimen/margin_vertical_field">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/ic_person_black_24dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ac_usu_ape"
            android:singleLine="true"
            android:maxLength="30"
            android:inputType="textPersonName"
            android:id="@+id/etApe_Aregister"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/margin_vertical_field">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_person_black_24dp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/spSex_Aregister"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/margin_vertical_field">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_phone_iphone_black_24dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ac_usu_telef"
                android:singleLine="true"
                android:maxLength="9"
                android:inputType="phone"
                android:id="@+id/etTelef_Aregister"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/margin_vertical_field">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_person_black_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:gravity="start|center"
                android:text="@string/ac_usu_FecNac"
                android:lines="1"
                android:id="@+id/tvFecNac_Aregister"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/margin_vertical_field">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_home_black_24dp"/>

            <TextView
                android:id="@+id/tvDirecc_Aregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:text="@string/ac_usu_direcc"
                android:padding="10dp" />
        </LinearLayout>
        <Button
            android:id="@+id/btnContinuar_Aregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:background="@color/colorAccent"
            android:padding="12dp"
            android:text="@string/action_continuar"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_button"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>